<resources>
    <string name="app_name">Labour</string>
    <string name="scan_your_nfc_tag_to_login">Scansiona il tuo tag NFC per accedere!</string>
    <string name="ATTIVA_NFC">Attiva il lettore NFC per accedere più facilmente</string>
    <string name="settings">Settings</string>
    <string name="esterno">Oppure se non disponibile o se si preferisce, si connetta il lettore esterno!</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="sesso">Sesso</string>
    <string name="uomo">Uomo</string>
    <string name="eta">Di età</string>
    <string name="profilo">Profilo</string>
    <string name="donna">Donna</string>
    <string name="speciale">Speciale</string>
    <string name="set_data">Imposta dati account</string>
    <string name="camera">camera</string>
    <string name="imposta">Imposta</string>
    <string name="cancella">Cancella</string>
    <string name="sfondo">sfondo</string>
    <string name="anni">23 Anni</string>
    <string name="mario_rossi">Mario Rossi</string>
    <string name="caratteristiche">22 Anni, Uomo</string>
    <string name="passi">Ti mancano: </string>
    <string name="pacchi">Pacchi</string>
    <string name="lavoro">Lavoro</string>
    <string name="listview">ListView</string>
    <string name="scansiona">Scegli un pacco da scansionare</string>
    <string name="image">Image</string>
    <string name="pacco">Seleziona un pacco</string>
    <string name="descizione_lunga">descizione non disponibile</string>
    <string name="seleziona_pacco">Devi prima selezionare un pacco</string>
    <string name="arrive_per">Arriva a destinazione per scansionare</string>
    <string name="scansionamento">Scansiona!</string>
    <string name="completati">Task Completati</string>
    <string name="imageview">ImageView</string>
</resources>
