<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:gravity="center">
        <ImageButton
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:background="@drawable/roundcorner"
            android:src="@mipmap/ic_launcher_round"
            android:contentDescription="@string/profilo">
        </ImageButton>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editNomeWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                tools:ignore="Autofill,LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editCognomeWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextCognome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/cognome"
                android:inputType="textPersonName"
                tools:ignore="Autofill,LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonsex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:onClick="showPopup"
            android:text="@string/sesso" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editEtaWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <EditText
            android:id="@+id/TextEta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/eta"
            android:inputType="numberDecimal"
            tools:ignore="Autofill,LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</LinearLayout>