<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_profile"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/relative1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/edit">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/pic"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="bottom"
                    android:contentDescription="@string/sfondo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/worker"
                    app:civ_border="true"
                    app:civ_border_width="2dp" />

                <ProgressBar
                    android:id="@+id/scroll"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <TextView
                android:id="@+id/nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mario_rossi"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_below="@id/relative1"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/caratteristiche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caratteristiche"
                android:textSize="21sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/nome"/>

            <ImageView
                android:id="@+id/edit"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/sfondo"
                android:elevation="2dp"
                android:onClick="onEditClick"
                android:src="@drawable/ic_settings_white_24dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/completati"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="26sp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

</LinearLayout>
</androidx.core.widget.NestedScrollView>